--- a/Vocable/Features/Root/Root.storyboard
+++ b/Vocable/Features/Root/Root.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yUp-dU-mBF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yUp-dU-mBF">
     <device id="ipad11_0rounded" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,31 +20,42 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YZa-3u-zGZ" userLabel="Text Container Stack View">
                                 <rect key="frame" x="20" y="0.0" width="1154" height="110"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J42-u9-ywg">
+                                    <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JR8-P2-9FD">
                                         <rect key="frame" x="0.0" y="0.0" width="930" height="110"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J42-u9-ywg">
+                                                <rect key="frame" x="0.0" y="0.0" width="930" height="110"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
+                                                <color key="textColor" name="DefaultFontColor"/>
+                                                <nil key="highlightedColor"/>
+                                                <variation key="heightClass=compact">
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                                </variation>
+                                                <variation key="widthClass=compact">
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                                </variation>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" name="Background"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="68" id="lAv-Xu-XWF"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="J42-u9-ywg" secondAttribute="bottom" id="3ZB-zh-czI"/>
+                                            <constraint firstAttribute="height" constant="68" id="L5I-fb-INW"/>
+                                            <constraint firstItem="J42-u9-ywg" firstAttribute="top" secondItem="JR8-P2-9FD" secondAttribute="topMargin" id="WDO-uJ-dSP"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="J42-u9-ywg" secondAttribute="trailing" id="jEY-mF-8jg"/>
+                                            <constraint firstItem="J42-u9-ywg" firstAttribute="leading" secondItem="JR8-P2-9FD" secondAttribute="leadingMargin" id="wxa-mN-gBt"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
-                                        <color key="textColor" name="DefaultFontColor"/>
-                                        <nil key="highlightedColor"/>
+                                        <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                         <variation key="default">
                                             <mask key="constraints">
-                                                <exclude reference="lAv-Xu-XWF"/>
+                                                <exclude reference="L5I-fb-INW"/>
                                             </mask>
-                                        </variation>
-                                        <variation key="heightClass=compact">
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
-                                        </variation>
-                                        <variation key="widthClass=compact">
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
                                             <mask key="constraints">
-                                                <include reference="lAv-Xu-XWF"/>
+                                                <include reference="L5I-fb-INW"/>
                                             </mask>
                                         </variation>
-                                    </label>
+                                    </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1OT-dF-ssX" userLabel="Navigation Buttons Stack View">
                                         <rect key="frame" x="938" y="0.0" width="216" height="110"/>
                                         <subviews>
@@ -137,6 +148,7 @@
                     </view>
                     <connections>
                         <outlet property="keyboardButton" destination="Abu-M3-qXM" id="0tx-N3-C5W"/>
+                        <outlet property="outputAlignmentView" destination="JR8-P2-9FD" id="Xru-WJ-uTF"/>
                         <outlet property="outputLabel" destination="J42-u9-ywg" id="brG-gy-yme"/>
                         <outlet property="settingsButton" destination="EnH-qh-EMS" id="8bD-ip-Wqv"/>
                     </connections>
