--- a/Vocable/Features/Root/Root.storyboard
+++ b/Vocable/Features/Root/Root.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yUp-dU-mBF">
-    <device id="ipad11_0rounded" orientation="landscape" layout="fullscreen" appearance="light"/>
+    <device id="retina5_9" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -14,17 +14,17 @@
             <objects>
                 <viewController id="yUp-dU-mBF" customClass="RootViewController" customModule="Vocable" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gXE-mI-utM">
-                        <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
+                        <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YZa-3u-zGZ" userLabel="Text Container Stack View">
-                                <rect key="frame" x="20" y="0.0" width="1154" height="110"/>
+                                <rect key="frame" x="60" y="0.0" width="692" height="48"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JR8-P2-9FD">
-                                        <rect key="frame" x="0.0" y="0.0" width="930" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600.66666666666663" height="48"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J42-u9-ywg">
-                                                <rect key="frame" x="0.0" y="0.0" width="930" height="110"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="600.66666666666663" height="48"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
                                                 <color key="textColor" name="DefaultFontColor"/>
                                                 <nil key="highlightedColor"/>
@@ -57,10 +57,10 @@
                                         </variation>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1OT-dF-ssX" userLabel="Navigation Buttons Stack View">
-                                        <rect key="frame" x="938" y="0.0" width="216" height="110"/>
+                                        <rect key="frame" x="608.66666666666663" y="0.0" width="83.333333333333371" height="48"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Abu-M3-qXM" userLabel="Keyboard Button" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="104" height="110"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="37.666666666666664" height="48"/>
                                                 <color key="tintColor" name="DefaultFontColor"/>
                                                 <state key="normal" image="keyboard" catalog="system">
                                                     <color key="titleColor" name="DefaultFontColor"/>
@@ -70,9 +70,9 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EnH-qh-EMS" userLabel="Settings Button" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                                <rect key="frame" x="112" y="0.0" width="104" height="110"/>
+                                                <rect key="frame" x="45.666666666666742" y="0.0" width="37.666666666666657" height="48"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="61" id="uZE-bU-gjN">
+                                                    <constraint firstAttribute="width" constant="62" id="uZE-bU-gjN">
                                                         <variation key="heightClass=regular-widthClass=regular" constant="104"/>
                                                     </constraint>
                                                 </constraints>
@@ -81,6 +81,16 @@
                                                 <state key="normal" image="gear" catalog="system">
                                                     <color key="titleColor" name="DefaultFontColor"/>
                                                 </state>
+                                                <variation key="heightClass=compact-widthClass=compact">
+                                                    <mask key="constraints">
+                                                        <exclude reference="uZE-bU-gjN"/>
+                                                    </mask>
+                                                </variation>
+                                                <variation key="heightClass=compact-widthClass=regular">
+                                                    <mask key="constraints">
+                                                        <exclude reference="uZE-bU-gjN"/>
+                                                    </mask>
+                                                </variation>
                                                 <variation key="heightClass=regular-widthClass=compact">
                                                     <mask key="constraints">
                                                         <exclude reference="uZE-bU-gjN"/>
@@ -95,25 +105,14 @@
                                             <constraint firstAttribute="height" priority="999" constant="48" id="9pf-8F-etE">
                                                 <variation key="heightClass=regular-widthClass=regular" constant="96"/>
                                             </constraint>
-                                            <constraint firstAttribute="width" secondItem="1OT-dF-ssX" secondAttribute="height" multiplier="2:1" id="Olp-S3-43F"/>
                                         </constraints>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="Olp-S3-43F"/>
-                                            </mask>
-                                        </variation>
-                                        <variation key="heightClass=regular-widthClass=regular">
-                                            <mask key="constraints">
-                                                <exclude reference="Olp-S3-43F"/>
-                                            </mask>
-                                        </variation>
                                     </stackView>
                                 </subviews>
                                 <variation key="heightClass=compact" axis="horizontal"/>
                                 <variation key="widthClass=regular" axis="horizontal"/>
                             </stackView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="duu-pz-FR0">
-                                <rect key="frame" x="20" y="118" width="1154" height="110"/>
+                                <rect key="frame" x="60" y="56" width="692" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="3at-Br-903">
                                         <variation key="heightClass=regular-widthClass=regular" constant="110"/>
@@ -140,6 +139,11 @@
                                 <exclude reference="KoW-Oy-V25"/>
                             </mask>
                         </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="KoW-Oy-V25"/>
+                            </mask>
+                        </variation>
                         <variation key="heightClass=regular-widthClass=regular">
                             <mask key="constraints">
                                 <include reference="KoW-Oy-V25"/>
@@ -162,11 +166,11 @@
             <objects>
                 <viewController id="33R-xW-UrQ" customClass="CategoriesCarouselViewController" customModule="Vocable" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ysz-No-obO">
-                        <rect key="frame" x="0.0" y="0.0" width="1154" height="110"/>
+                        <rect key="frame" x="0.0" y="0.0" width="692" height="48"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fb7-Uu-X9X" userLabel="Left Chevron" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="104" height="110"/>
+                                <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="48" id="4bS-Hn-9Cw">
                                         <variation key="heightClass=regular-widthClass=regular" constant="104"/>
@@ -188,10 +192,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIs-oB-LmA" userLabel="Collection View Container">
-                                <rect key="frame" x="104" y="0.0" width="946" height="110"/>
+                                <rect key="frame" x="48" y="0.0" width="596" height="48"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Nn-jU-gEe" customClass="CarouselGridCollectionView" customModule="Vocable" customModuleProvider="target">
-                                        <rect key="frame" x="8" y="0.0" width="930" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="596" height="48"/>
                                         <color key="backgroundColor" name="Background"/>
                                         <collectionViewLayout key="collectionViewLayout" id="N88-SP-98N" customClass="CarouselGridLayout" customModule="Vocable" customModuleProvider="target"/>
                                         <cells/>
@@ -210,7 +214,7 @@
                                 </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kdi-sC-FYx" userLabel="Right Chevron" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="1050" y="0.0" width="104" height="110"/>
+                                <rect key="frame" x="644" y="0.0" width="48" height="48"/>
                                 <color key="tintColor" name="DefaultFontColor"/>
                                 <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                 <state key="normal" image="chevron.right" catalog="system">
@@ -254,13 +258,13 @@
             <size key="intrinsicContentSize" width="25" height="22"/>
         </designable>
         <designable name="EnH-qh-EMS">
-            <size key="intrinsicContentSize" width="38" height="38"/>
+            <size key="intrinsicContentSize" width="37.666666666666664" height="38"/>
         </designable>
         <designable name="Fb7-Uu-X9X">
-            <size key="intrinsicContentSize" width="28.5" height="38"/>
+            <size key="intrinsicContentSize" width="28.666666666666668" height="38"/>
         </designable>
         <designable name="kdi-sC-FYx">
-            <size key="intrinsicContentSize" width="28.5" height="38"/>
+            <size key="intrinsicContentSize" width="28.666666666666668" height="38"/>
         </designable>
     </designables>
     <resources>
